Karthi/src/objects/Organic_product__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_You_Find_Your_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did You Find Your Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_ID__c</fullName>
        <label>Mail ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash On Delivery</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_List__c</fullName>
        <label>Product List</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huggies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shapoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makeup kits</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>1.Food Items</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2.Cosmetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.BabyItems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Organic product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organic product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organic products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>